# NLPC

./: CMakeLists.txt  LICENSE  README.md  dictionary.txt
src/: Data.cpp  Data.h  Embedding.cpp  Embedding.h  Preprocess.cpp  Preprocess.h  SpellCheck.cpp  SpellCheck.h  Tokenization.cpp  Tokenization.h  main.cpp
targets/src/: CMakeLists.txt
